# OnlineVotingSystem

./: Project Report.docx  uml.drawio
Evoting/: CMakeLists.txt  build.bat  clean.bat  main.cpp
Evoting/data/: elections.txt  users.txt
